--- a/templates/python.hbs
+++ b/templates/python.hbs
@@ -15,7 +15,7 @@ class LDFlags:
 
         {{/if~}}
         {{#if this.description}}
-        {{ this.description }}
+        {{ description this.description "" 8 }}
         {{/if}}
         """
 
